# cpp-eid-sdk

./: .gitignore  CMakeLists.txt  README.md  build.sh  ios.toolchain.cmake  ios_sim.toolchain.cmake
android/: Android.mk
include/cpp_eid_sdk/: ASN1Item.h  BaseDataGroup.h
src/Models/: ASN1Item.cpp  BaseDataGroup.cpp
third_parties/: build.deps.sh
